1. A.java 삭제 - 테스트용이었음. 2. 서비스 부분 구현 	2.1 SaveWindow 	2.2 SaveFile 3. Notepad.fxml 	3.1 메뉴 추가(file - 4가지) 4. NotepadController 구현 	4.1 Service interface 연결 	4.2 OnSave 구현 	4.3 FilePath 추가

--- a/notepad/src/notepad/Notepad.fxml
+++ b/notepad/src/notepad/Notepad.fxml
@@ -6,14 +6,16 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notepad.NotepadController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="저장" />
+              <MenuItem mnemonicParsing="false" text="새 파일" />
+                  <MenuItem mnemonicParsing="false" onAction="#OnSave" text="저장" />
+                  <MenuItem mnemonicParsing="false" text="다른 이름으로 저장" />
+                  <MenuItem mnemonicParsing="false" text="더 보기" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -30,6 +32,6 @@
       </MenuBar>
    </top>
    <center>
-      <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="txtArea" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
