저장 & 불러오기 구현
1. dao 객체 구현
2. dao 바탕으로 파일 경로 저장
3. 불러오기 구현
4. loadrecent 메소드 제작하고 메뉴에 생성

--- a/notepad/src/notepad/Notepad.fxml
+++ b/notepad/src/notepad/Notepad.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notepad.NotepadController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -18,7 +18,7 @@
                   <MenuItem mnemonicParsing="false" text="더 보기" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu fx:id="recent" mnemonicParsing="false" text="Recent">
             <items>
               <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
